# SPL_Ass3_BGRSclient

./: CMakeLists.txt  makefile
include/: ConnectionHandler.h  EncoderDecoder.h  Task.h
src/: ConnectionHandler.cpp  EncoderDecoder.cpp  KeyboardTask.cpp  NetTask.cpp  Task.cpp  main.cpp
